# jorts

./: .gitignore  .valalintignore  CODE_OF_CONDUCT.md  README.md  io.github.ellie_commons.jorts.flathub.yml  io.github.elly_code.jorts.devel.yml  io.github.elly_code.jorts.yml  meson.build  meson_options.txt  sqgipkg.json
.github/workflows/: CI.yml  msys2.yml  release.yml
data/: Application.css  Themes.css  jorts.gresource.xml.in  jorts.gschema.xml.in  jorts.metainfo.xml.in.in  meson.build
data/icons/: meson.build
docs/development/: building.md  flatpak.md  packagings.md
po/: LINGUAS  POTFILES  bn.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fil.po  fr.po  hi.po  hr.po  it.po  ja.po  jorts.pot  lt.po  meson.build  nb.po  nl.po  no.po  pl.po  pt.po  pt_br.po  ru.po  sk.po  sv.po  tr.po  uk.po  vi.po  zh.po
po/extra/: LINGUAS  POTFILES  bn.po  cs.po  da.po  de.po  el.po  es.po  extra.pot  fi.po  fil.po  fr.po  hi.po  hr.po  it.po  ja.po  lt.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_br.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
src/: Application.vala  Constants.vala  meson.build
src/Objects/: ListPrefix.vala  NoteData.vala  Themes.vala  Zoom.vala  ZoomType.vala
src/Services/: ColorController.vala  NoteManager.vala  ScribblyController.vala  Storage.vala  ZoomController.vala
src/Utils/: Autostart.vala  Random.vala
src/Views/: NoteView.vala  PreferencesView.vala
src/Widgets/: ActionBar.vala  Bin.vala  EditableLabel.vala  Popover.vala  TextBuffer.vala  TextView.vala
src/Widgets/PopoverWidgets/: MonospaceBox.vala  ZoomBox.vala
src/Widgets/PreferencesWidgets/: SettingsBox.vala
src/Windows/: PreferenceWindow.vala  StickyNoteWindow.vala
tests/: meson.build
