option('profile',
    type : 'combo',
    choices : ['release', 'development', 'legacy-rdnn'],
    value : 'release',
    description : 'Which profile to use for the app'
)
option('icon-variant',
    type : 'combo',
    choices : ['default', 'classic', 'pride', 'halloween', 'devel'],
    value : 'default',
    description : 'The name of the seasonal icon and style to use'
)
option('windows_build', type: 'boolean', value: false, description: 'If this is a windows build. Switched on automatically on windows machines')
option('flathub', type: 'boolean', value: false, description: 'Somehow flathub builds space boxes differently')