
########### META:
# Linter
# Appstream files and co
# Storage: Load and save

### Services

# Build some services and enums. Do random manipulations and compare


#### UI
# build specific widgets:

# Textview
# Add initial text. Activate lists on a sentence. Compare with reference. Change lists. Compare with reference

# preferences dialog
# show the window. No binds.

# notes
# show window. No storage.